--- a/src/styles.css
+++ b/src/styles.css
@@ -192,7 +192,8 @@ section{
 .about .banner_section,
 .product .banner_section,
 .gallery .banner_section,
-.contact .banner_section{
+.contact .banner_section,
+.distributors .banner_section{
     background: url(../assets/banner-slide/top-banner.jpg);
     background-repeat: no-repeat;
     background-position: center;
